[package]
name = "cronparse"
description = "Crontab files parser"
version = "0.4.0"
authors = ["Konstantin Stepanov <me@kstep.me>"]
readme = "README.md"
repository = "https://github.com/kstep/cronparse.rs.git"
documentation = "http://kstep.me/cronparse.rs/cronparse/index.html"
license = "MIT/Apache-2.0"
keywords = ["cron", "crontab", "parser"]
